k8s/manifests/04-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: yellowbooks
  labels:
    app: api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: yellowbooks-sa
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: api
        image: 619425981538.dkr.ecr.ap-southeast-1.amazonaws.com/yellbook/api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 5


---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: yellowbooks
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: http
